Updated jade files to use ng-include for SVG

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,9 @@
 doctype html
-html
-  head(ng-app="app")
+html(ng-app="app")
+  head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/vendors/angular.min.js')
-  body
+    script(src='/javascripts/scripts.js')
+  body(ng-controller="converter")
     block content
