--- a/views/index.jade
+++ b/views/index.jade
@@ -3,8 +3,6 @@ extends layout
 block content
   h1 Guitar to Piano Converter
 
-  div.guitar
-    img(class='guitar-image' src="/images/guitar_neck.jpg")
+  div(class='guitar-image' ng-include="'/images/guitar.svg'")
 
-  div.piano
-    embed(class='piano-image' src='/images/piano.svg')
+  div(class='piano-image' ng-include="'/images/piano.svg'")
