--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Guitar to Piano Converter
+  //Guitar image
+  div(class='guitar' ng-include="'/images/guitar.svg'")
 
-  div(class='guitar-image' ng-include="'/images/guitar.svg'")
-
-  div(class='piano-image' ng-include="'/images/piano.svg'")
+  div(class='piano' ng-include="'/images/piano.svg'")
