--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,5 @@ html(ng-app="app")
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/vendors/angular.min.js')
     script(src='/javascripts/scripts.js')
-  body(ng-controller="converter")
+  body
     block content
