--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   h1 Guitar to Piano Converter
   //Guitar image
-  div(class='guitar' ng-include="'/images/guitar.svg'")
-
-  div(class='piano' ng-include="'/images/piano.svg'")
+  div.container(ng-controller="converterCtrl")
+    div(class='guitar' ng-include="'/images/guitar.svg'")
+    div(class='piano' ng-include="'/images/piano.svg'")
+    p {{guitar.string1}}
