--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,13 +48,35 @@ table {
 /*Begin Custom CSS*/
 
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-h1 {
+.header {
+  width: 100%;
+  padding: 20px 0;
+  display: block;
   text-align: center;
+  position: fixed;
+  background: linear-gradient(#57BCEF, #226688);
+  color: white;
+  text-shadow: #222 -1px -1px 1px;
+  box-shadow: 2px 2px 2px #222;
   font-size: 3em;
+}
+
+.container {
+	width: 100%;
+	display: inline-block;
+	margin-top: 130px;
+}
+
+.menu {
+	width: 20%;
+	position: absolute;
+	display: inline-block;
+	text-align: center;
+	height: 100%;
+	background-color: blue;
 }
 
 .piano, .guitar {
@@ -64,6 +86,7 @@ h1 {
   margin: 0 auto;
 }
 
+/*Initial Vector Styling */
 .cls-24, .cls-25, .cls-26, .cls-27, .cls-28 {
 	stroke: #000;
 	opacity: 0;
@@ -83,6 +106,7 @@ h1 {
 	stroke-miterlimit: 10;
 }
 
+/*Click-active Vector Styling*/
 .active {
 	opacity: 1;
 }
