--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,7 @@ dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
+figure, figcaption, footer, header,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -21,7 +21,7 @@ time, mark, audio, video {
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+footer, header, menu, nav, section {
 	display: block;
 }
 body {
@@ -70,14 +70,14 @@ body {
 	margin-top: 130px;
 }
 
-.menu {
-	width: 20%;
-	position: absolute;
-	display: inline-block;
-	text-align: center;
-	height: 100%;
-	background-color: blue;
-}
+/*.menu {*/
+	/*width: 20%;*/
+	/*position: absolute;*/
+	/*display: inline-block;*/
+	/*text-align: center;*/
+	/*height: 100%;*/
+	/*background-color: blue;*/
+/*}*/
 
 .piano, .guitar {
   width: 80%;
