--- a/views/index.jade
+++ b/views/index.jade
@@ -7,9 +7,9 @@ block content
   div.container(ng-controller="converterCtrl")
     div(class='guitar' ng-include="'/images/guitar.svg'")
     div(class='piano' ng-include="'/images/piano.svg'")
-  div.menu
-    h2 Pick a chord
-    div.root
-      p E
-    div.chord
-      p major
+  //div.menu
+  //  h2 Pick a chord
+  //  div.root
+  //    p E
+  //  div.chord
+  //    p major
