--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ block content
     h1 Guitar to Piano Converter
   //Guitar image
   div.container(ng-controller="converterCtrl")
+    h3 Click frets on the guitar to display the corresponding notes on the piano
     div(class='guitar' ng-include="'/images/guitar.svg'")
     div(class='piano' ng-include="'/images/piano.svg'")
   //div.menu
