--- a/views/index.jade
+++ b/views/index.jade
@@ -8,9 +8,11 @@ block content
     h3 Click frets on the guitar to display the corresponding notes on the piano
     div(class='guitar' ng-include="'/images/guitar.svg'")
     div(class='piano' ng-include="'/images/piano.svg'")
-  //div.menu
-  //  h2 Pick a chord
-  //  div.root
-  //    p E
-  //  div.chord
-  //    p major
+    //div.menu
+    //  h2 Pick a chord
+    //  div.root
+    //    p E
+    //  div.chord
+    //    p major
+    div.footer
+      p Copyright &#169; 2016 Connor Klausing
