--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html(ng-app="app")
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css')
     script(src='/vendors/angular.min.js')
     script(src='/javascripts/scripts.js')
   body
