--- a/views/index.jade
+++ b/views/index.jade
@@ -12,14 +12,16 @@ block content
     div.menu(ng-class="{menuactive:menuStatus === 'open'}")
       div.chordbox
         h2 Pick a chord
-        select
-          option(value="0") Root Note
+        select(name="rootSelect" ng-model="chordData.rootSelect")
+          option(value="0" selected) Root Note
           option(value="E") E
           option(value="F") F
           option(value="G") G
-        select
-          option(value="Chord") Chord Type
+        select(name="chordSelect" ng-model="chordData.chordSelect")
+          option(value="Chord" selected) Chord Type
           option(value="major") major
           option(value="minor") minor
+        submit(ng-click="showChord()") Go!
+        p {{chordData.rootSelect}} {{chordData.chordSelect}}
     div.footer
       p Copyright &#169; 2016 Connor Klausing
