--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,6 +62,7 @@ body {
 	text-shadow: #222 -1px -1px 1px;
 	box-shadow: 2px 2px 2px #222;
 	font-size: 3em;
+	border: 1px solid black;
 }
 
 .container {
@@ -86,30 +87,48 @@ body {
 	z-index: 1;
 	right: -30%;
 	top: 0;
-	background: linear-gradient(to left, #706F6F, #A1A0A0);
+	background: linear-gradient(to left, #7A7A7A, #706F6F, #7A7A7A);
 	box-shadow: none;
 	transition: all 0.5s ease;
+		border: 1px solid black;
 }
 
 .chordbox {
-	margin: 20% 0;
 	font-size: 2em;
-	text-shadow: -1px 0 1px black ;
+}
+
+.chordbox h2 {
+	padding: 20px;
+	background: linear-gradient(#57BCEF, #226688);
 	color: white;
+	text-shadow: #222 -1px -1px 1px;
+	box-shadow: 2px 2px 2px #222;
+	border: 1px solid black
 }
 
 select {
-	font-size: 1.33em;
 	margin: 10px;
+	font-size: 1.33em;	
 }
 
-.chordbox button {
+.chordbox submit {
 	display: block;
+	width: 100px;
+	padding: 10px 0;
 	margin: 0 auto;
 	font-size: .75em;
 	border-radius: 10px;
 	background-color: #fff;
+	color: black;
+	text-shadow: none;
+	box-shadow: 1px 1px 5px black;
+	cursor: default;
 }
+
+.chordbox submit:hover {
+	box-shadow: 1px 1px 10px black;
+}
+
 .menubutton {
 	position: absolute;
 	right: 20px;
@@ -130,6 +149,7 @@ select {
 	color: white;
 	text-shadow: #222 -1px -1px 1px;
 	box-shadow: 1px 1px 1px #222;
+	border: 1px solid black;
 }
 
 /*click-triggered classes*/
