--- a/views/index.jade
+++ b/views/index.jade
@@ -17,11 +17,14 @@ block content
           option(value="E") E
           option(value="F") F
           option(value="G") G
+          option(value="A") A
+          option(value="B") B
+          option(value="C") C
+          option(value="D") D
         select(name="chordSelect" ng-model="chordData.chordSelect")
           option(value="Chord" selected) Chord Type
           option(value="major") major
           option(value="minor") minor
         submit(ng-click="showChord()") Go!
-        p {{chordData.rootSelect}} {{chordData.chordSelect}}
     div.footer
       p Copyright &#169; 2016 Connor Klausing
