Updating head elements to help SEO

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,8 +13,7 @@ block content
       div.chordbox
         h2(ng-click="menuToggle()") Pick a chord
         select(name="rootSelect" ng-model="chordData.rootSelect")
-          option(value="0" selected) Root Note
-          option(value="E") E
+          option(value="E" selected) E
           option(value="F") F
           option(value="G") G
           option(value="A") A
