--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,9 @@
 doctype html
 html(ng-app="app")
   head
-    title= title
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(name="description" content="Convert your guitar tabs to piano chords online. This converter is free, easy to use, and interactive. Enjoy!")
+    title Guitar To Piano Converter: Convert Your Guitar Tabs to Piano Chords!
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css')
     script(src='/vendors/angular.min.js')
