--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html(ng-app="app")
   head
     meta(content='width=device-width', initial-scale=1.0, maximum-scale=1.0, user-scalable=0, name='viewport')
+    meta(name="google-site-verification" content="Hta2Fk0pWViBvPqZ2pqrYB1PXZhycimzUDfFEbpXNu4")
     title Guitar To Piano Converter | Convert Your Guitar Tabs to Piano Chords!
     meta(name="description" content="Guitar To Piano Converter - Convert your guitar tabs to piano chords online. This converter is free, easy to use, and interactive. Enjoy!")
     meta(name="wot-verification" content="36941df19cee17510586")
